# object-detection-metrics

./: README.md  pyproject.toml  requirements.txt  setup.py
odmetrics/: bounding_box.py  tube.py
odmetrics/data/: make_dataset.py
odmetrics/evaluators/: coco_evaluator.py  pascal_voc_evaluator.py  tube_evaluator.py
odmetrics/ui/: details.py  results.py  run_ui.py  splash.py
odmetrics/utils/: converter.py  enumerators.py  general_utils.py  validations.py
src/evaluators/: coco_evaluator.py
src/utils/: general_utils.py
toyexample/: drawing_bbs.py  evaluate_bbs.py  results.py
