[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odmetrics"
version = "0.0.1"
authors = [
    { name = "Vojtech Dvorak" },
    { name = "Rafael Padilla" }
]
description = "Object detection metrics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/v-dvorak/object-detection-metrics"
issues = "https://github.com/v-dvorak/object-detection-metrics/issues"
